HND-52 Sends confirm e-mail code and adds routes to confirm and resend it again
